--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
-<div class="content" role="main">
-  <div>
-    <span>{{ title }} app is running!</span>
+<section>
+  <div class="content" role="main">
+    <nav>
+      <ul>
+        <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
+        <li><a routerLink="/dashboard" routerLinkActive="active">Dashboard</a></li>
+      </ul>
+    </nav>
+    <span>Welcome to the {{ title }}!</span>
     <router-outlet></router-outlet>
   </div>
-</div>
+</section>
