fix redirect error, minor changes

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,6 @@
-<h2>DASHBOARD!</h2>
+<h2>Dashboard content</h2>
 <a class="margin-right-l padding-bottom-s" (click)="logout()" routerLink="/home">Logout</a>
 <div class="margin-top-l margin-left-m">
-    <h2>Protected Page Content Area</h2>
     <div>
       <h3>User Info</h3>
       <div *ngIf="userInfo && projectdb_person && projectdb_person.data" class="margin-top-l">
