--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,29 +3,29 @@
 <div class="margin-top-l margin-left-m">
     <div>
       <h3>User Info</h3>
-      <div *ngIf="userInfo && projectdb_person && projectdb_person.data" class="margin-top-l">
+      <div *ngIf="userInfo && projectdbPerson && projectdbPerson.data" class="margin-top-l">
         <p>Name: {{userInfo.firstName}} {{userInfo.lastName}}</p>
         <p>UPI: {{userInfo.upi}}</p>
         <p>Email: {{userInfo.email}}</p>
         <p>Groups: {{userInfo.groups}}</p>
-        <p><strong>ProjectDB Person Id: </strong>{{projectdb_person.data.id}}</p>
+        <p><strong>ProjectDB Person Id: </strong>{{projectdbPerson.data.id}}</p>
       </div>
-      <div *ngIf="projectdb_person && projectdb_person.error && !(loading$ | async)" class="margin-top-l">
-        Error: {{projectdb_person | json}}
+      <div *ngIf="projectdbPerson && projectdbPerson.error && (loading$ | async) === (false | null | undefined)" class="margin-top-l">
+        Error: {{projectdbPerson | json}}
       </div>
     </div>
     <div>
-      <button *ngIf="projectdb_person && projectdb_person.data" (click)="getPersonProjects()">Get my projects</button>
+      <button *ngIf="projectdbPerson && projectdbPerson.data" (click)="getPersonProjects()">Get my projects</button>
     </div>
     <!-- <app-loading-indicator *ngIf="loading$ | async"></app-loading-indicator> -->
-    <div *ngIf="projectdb_person_projects && projectdb_person_projects.data && !(loading$ | async)" class="margin-top-l">
+    <div *ngIf="projectdbPersonProjects && projectdbPersonProjects.data && (loading$ | async) === (false | null | undefined)" class="margin-top-l">
       <table>
         <thead>
             <th>Project Id</th>
             <th>Notes</th>
         </thead>
         <tbody>
-            <tr *ngFor="let project of projectdb_person_projects.data; let even = even; let odd = odd" 
+            <tr *ngFor="let project of projectdbPersonProjects.data; let even = even; let odd = odd" 
             [ngClass]="{ odd: odd, even: even }">
                 <td>{{project.id}}</td>
                 <td>{{project.notes}}</td>
@@ -33,7 +33,7 @@
         </tbody>
     </table>
     </div>
-    <div *ngIf="projectdb_person_projects && projectdb_person_projects.error && !(loading$ | async)" class="margin-top-l">
-      Error: {{projectdb_person_projects | json}}
+    <div *ngIf="projectdbPersonProjects && projectdbPersonProjects.error && (loading$ | async) === (false | null | undefined)" class="margin-top-l">
+      Error: {{projectdbPersonProjects | json}}
     </div>
   </div>
