rename dashboard component to my-projects, add my-services component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
     <nav>
       <ul>
         <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
-        <li><a routerLink="/dashboard" routerLinkActive="active">Dashboard</a></li>
+        <li><a routerLink="/my-projects" routerLinkActive="active">My Projects</a></li>
+        <li><a routerLink="/my-services" routerLinkActive="active">My Services</a></li>
       </ul>
     </nav>
     <span>Welcome to the {{ title }}!</span>
