--- a/src/app/components/my-projects/my-projects.component.html
+++ b/src/app/components/my-projects/my-projects.component.html
@@ -1,4 +1,4 @@
-<h2>Dashboard content</h2>
+<h2>My Projects</h2>
 <a class="margin-right-l padding-bottom-s" (click)="logout()" routerLink="/home">Logout</a>
 <div class="margin-top-l margin-left-m">
   <div>
