--- a/src/app/core/core.component.html
+++ b/src/app/core/core.component.html
@@ -6,12 +6,12 @@
           [mode]="(isHandset$ | async) ? 'over' : 'side'"
           [opened]="(isHandset$ | async) === false">
         <mat-toolbar>
-          <button mat-button routerLink="/">
+          <button mat-button routerLink="/home">
             <h3>dashboard-ui</h3>
           </button>
         </mat-toolbar>
         <mat-nav-list>
-          <a mat-list-item *ngFor="let route of routes" [routerLink]="route.path"> {{route.label}}</a>
+          <a mat-list-item *ngFor="let route of routes" [routerLink]="route.path" routerLinkActive="mat-accent"> {{route.label}}</a>
         </mat-nav-list>
       </mat-sidenav>
       <mat-sidenav-content>
@@ -25,13 +25,15 @@
               *ngIf="isHandset$ | async">
               <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
-            <button mat-button routerLink="/">
+            <button mat-button routerLink="/home">
               <h3>dashboard-ui</h3>
             </button>
-            <a mat-button *ngFor="let route of routes" [routerLink]="route.path"> {{route.label}}</a>
+            <a mat-button *ngFor="let route of routes" [routerLink]="route.path" routerLinkActive="mat-accent"> {{route.label}}</a>
           </mat-toolbar-row>
         </mat-toolbar>
+
         <router-outlet></router-outlet>
+        
       </mat-sidenav-content>
     </mat-sidenav-container>
   </div>
