--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
-<span>Welcome to the {{ title }}!</span>
-<div>
-  <home-dash></home-dash>
+
+<div class="home-container">
+  <span>Welcome to the {{ title }}!</span>
+  <home-dashboard></home-dashboard>
 </div>
