--- a/src/app/core/components/my-projects/my-projects.component.html
+++ b/src/app/core/components/my-projects/my-projects.component.html
@@ -1,30 +1,32 @@
-<h2>My Projects</h2>
-<a class="margin-right-l padding-bottom-s" (click)="logout()" routerLink="/home">Logout</a>
-<div class="margin-top-l margin-left-m">
-  <div>
-    <h3>User Info</h3>
-    <div *ngIf="(loading$ | async)">
-      Loading...
-    </div>
-    <div *ngIf="userInfo" class="margin-top-l">
-      <p>Name: {{userInfo.firstName}} {{userInfo.lastName}}</p>
-      <p>UPI: {{userInfo.upi}}</p>
-      <p>Email: {{userInfo.email}}</p>
-      <p>Groups: {{userInfo.groups}}</p>
-    </div>
-    <div *ngIf="!userInfo && !(loading$ | async)" class="margin-top-l">
-      Error: Could not get user info
-    </div>
-    <div *ngIf="(loading$ | async)">
-      Loading...
-    </div>
-    <div *ngIf="error">
-      Error: {{error}}
-    </div>
-    <div *ngIf="personInfo">
-      PersonInfo: {{personInfo | json }}
-      <div *ngFor="let project of personInfo.projects">
-        <p>Project Id: {{project.id}}</p>
+<div class="my-projects-container">
+  <h2>My Projects</h2>
+  <a class="margin-right-l padding-bottom-s" (click)="logout()" routerLink="/home">Logout</a>
+  <div class="margin-top-l margin-left-m">
+    <div>
+      <h3>User Info</h3>
+      <div *ngIf="(loading$ | async)">
+        Loading...
+      </div>
+      <div *ngIf="userInfo" class="margin-top-l">
+        <p>Name: {{userInfo.firstName}} {{userInfo.lastName}}</p>
+        <p>UPI: {{userInfo.upi}}</p>
+        <p>Email: {{userInfo.email}}</p>
+        <p>Groups: {{userInfo.groups}}</p>
+      </div>
+      <div *ngIf="!userInfo && !(loading$ | async)" class="margin-top-l">
+        Error: Could not get user info
+      </div>
+      <div *ngIf="(loading$ | async)">
+        Loading...
+      </div>
+      <div *ngIf="error">
+        Error: {{error}}
+      </div>
+      <div *ngIf="personInfo">
+        PersonInfo: {{personInfo | json }}
+        <div *ngFor="let project of personInfo.projects">
+          <p>Project Id: {{project.id}}</p>
+        </div>
       </div>
     </div>
   </div>
