--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         [opened]="(isHandset$ | async) === false">
       <mat-toolbar>
         <button mat-button routerLink="/home">
-          <h3>dashboard-ui</h3>
+          <h3>Logo</h3>
         </button>
       </mat-toolbar>
       <mat-nav-list>
@@ -24,7 +24,7 @@
             <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
           </button>
           <button mat-button routerLink="/home">
-            <h3>dashboard-ui</h3>
+            <h3>Logo</h3>
           </button>
           <a mat-button *ngFor="let route of routes" [routerLink]="route.path" routerLinkActive="mat-accent"> {{route.label}}</a>
         </mat-toolbar-row>
