--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,32 +1,49 @@
 
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat-core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$dashboard-ui-primary: mat-palette($mat-indigo);
-$dashboard-ui-accent: mat-palette($mat-pink, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$dashboard-ui-warn: mat-palette($mat-red);
-
-// Create the theme object (a Sass map containing all of the palettes).
-$dashboard-ui-theme: mat-light-theme($dashboard-ui-primary, $dashboard-ui-accent, $dashboard-ui-warn);
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include angular-material-theme($dashboard-ui-theme);
+@import 'themes';
+@import 'typography';
 
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: $font-family; }
+
+/*
+ * Text styles
+ https://material.angular.io/guide/typography
+ */
+
+ h1 {
+    margin-top: 0;
+    color: $heading-1-font-color;
+    font-family: $font-family;
+  }
+  
+  h2 {
+    color: $heading-2-font-color;
+    font-family: $font-family;
+  }
+  
+  h3 {
+    color: $heading-3-font-color;
+    font-family: $font-family;
+  }
+  
+  h4 {
+    color: $heading-4-font-color;
+    font-family: $font-family;
+  }
+  
+  p {
+    margin-top: 0;
+    font-family: $font-family;
+  }
+  
+  a {
+    text-decoration: none;
+    color: $link-light-bg-color;
+    font-family: $font-family;
+  }
+  
+  span {
+    font-family: $font-family;
+  }
