--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -31,6 +31,8 @@
       </mat-toolbar>
 
       <router-outlet></router-outlet>
+
+      <app-footer></app-footer>
       
     </mat-sidenav-content>
   </mat-sidenav-container>
