--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,46 +4,51 @@
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: $font-family; }
+html, body { 
+  height: 100%; 
+}
+
+body { 
+  margin: 0; font-family: $font-family; 
+}
 
 /*
  * Text styles
  https://material.angular.io/guide/typography
  */
 
- h1 {
-    margin-top: 0;
-    color: $heading-1-font-color;
-    font-family: $font-family;
-  }
-  
-  h2 {
-    color: $heading-2-font-color;
-    font-family: $font-family;
-  }
-  
-  h3 {
-    color: $heading-3-font-color;
-    font-family: $font-family;
-  }
-  
-  h4 {
-    color: $heading-4-font-color;
-    font-family: $font-family;
-  }
-  
-  p {
-    margin-top: 0;
-    font-family: $font-family;
-  }
-  
-  a {
-    text-decoration: none;
-    color: $link-light-bg-color;
-    font-family: $font-family;
-  }
-  
-  span {
-    font-family: $font-family;
-  }
+h1 {
+  margin-top: 0;
+  color: $heading-1-font-color;
+  font-family: $font-family;
+}
+
+h2 {
+  color: $heading-2-font-color;
+  font-family: $font-family;
+}
+
+h3 {
+  color: $heading-3-font-color;
+  font-family: $font-family;
+}
+
+h4 {
+  color: $heading-4-font-color;
+  font-family: $font-family;
+}
+
+p {
+  margin-top: 0;
+  font-family: $font-family;
+}
+
+a {
+  text-decoration: none;
+  color: $link-light-bg-color;
+  font-family: $font-family;
+}
+
+span {
+  font-family: $font-family;
+}
