add flex-layout and import more Hub styles

--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -18,7 +18,7 @@ footer.footer-xs {
   height: $height-footer !important;
   flex-direction: column;
   box-sizing: border-box;
-  display: flex;
+  display: flex;    //temp hack
   place-content: center;
   align-items: center;
 }
