--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,3 +52,58 @@ a {
 span {
   font-family: $font-family;
 }
+
+.component {
+  margin: $offset-gt-xs;
+  max-width: $width-page-max;
+}
+
+.component-xs {
+  @extend .component;
+  margin: $offset-xs;
+}
+
+.flex-hack {
+  flex: 1 1 auto !important; // For Safari
+  //width: 100%; // For IE 11
+}
+
+.site-content {
+  @extend .flex-hack;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: $width-page-max !important; // If not important then gets overidden by some fxLayout styles
+}
+
+.site-padding {
+  @extend .site-content;
+  margin-top: $offset-gt-xs / 2.0;
+  margin-bottom: 5em;
+  padding-top: $padding-site;
+  padding-left: $padding-site;
+  padding-right: $padding-site;
+}
+
+.site-padding-xs {
+  @extend .site-content;
+  margin-top: $offset-xs / 2.0;
+  margin-bottom: $offset-xs;
+  padding-top: $offset-xs;
+  padding-left: $offset-xs;
+  padding-right: $offset-xs;
+}
+
+.site-padding-sm {
+  @extend .site-content;
+  margin-top: $offset-xs / 2.0;
+  margin-bottom: 5em;
+  padding-top: $padding-site / 2.0;
+  padding-left: $padding-site;
+  padding-right: $padding-site;
+}
+
+.site-content-padded {
+  @extend .site-content;
+  padding-top: 3em;
+  padding-bottom: 3em;
+}
