add hub-like header html and styles

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<div *ngIf="isVisible" class="header" [ngStyle]="getBackgroundStyle()">
+  <div class="header-padding" ngClass.xs="header-padding-xs">
+    <div>
+      <div class="info" ngClass.xs="info-xs" fxFlex="475px" fxFlex.xs="100" [ngStyle.gt-xs]="getInfoStyle()">
+        <h1 *ngIf="title">{{title}}</h1>
+        <div *ngIf="description" class="header-description">
+          <p>{{description}}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
