--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,3 +107,9 @@ span {
   padding-top: 3em;
   padding-bottom: 3em;
 }
+
+.div-background-image {
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+}
