--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>
-      <button mat-button routerLink="/home">
-        <h3>Logo</h3>
-      </button>
+  <mat-sidenav #drawer fixedInViewport
+      attr.role="navigation"
+      mode="over"
+      opened="false">
+    <mat-toolbar color="primary" class="app-toolbar" ngClass.xs="app-toolbar-xs">
+      <a routerLink="/" class="dashboard-logo" ngClass.xs="dashboard-logo-xs">
+        <img src="https://via.placeholder.com/239x32">
+      </a>
     </mat-toolbar>
     <mat-nav-list>
       <a mat-list-item *ngFor="let route of routes" [routerLink]="route.path" routerLinkActive="mat-accent">{{route.label}}</a>
@@ -17,22 +17,27 @@
       <div class="sidenav-content" fxLayout="column" ngClass.xs="sidenav-content-xs">
         <div class="app-toolbar-container">
           <mat-toolbar color="primary" class="site-content app-toolbar" ngClass.xs="site-content app-toolbar-xs">
-            <mat-toolbar-row class="app-toolbar-row" ngClass.xs="app-toolbar-row-xs">
+            <mat-toolbar-row class="app-toolbar-row" fxLayout="row" ngClass.xs="app-toolbar-row-xs">
               <button 
                 type="button"
                 aria-label="Toggle sidenav"
                 mat-icon-button
+                style="margin-right: 6px;" 
+                fxHide.gt-sm
                 (click)="drawer.toggle()"
-                *ngIf="isHandset$ | async">
+                >
                 <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
               </button>
-              <button mat-button routerLink="/home">
-                <h3>Logo</h3>
-              </button>
-              <a mat-button *ngFor="let route of routes" [routerLink]="route.path" routerLinkActive="mat-accent">{{route.label}}</a>
+              <a routerLink="/" class="dashboard-logo" ngClass.xs="dashboard-logo-xs">
+                <img src="https://via.placeholder.com/239x32">
+              </a>
+              <!-- <span style="flex: 1 1 auto;"></span> -->
+              <a mat-button *ngFor="let route of routes" fxHide.lt-md [routerLink]="route.path" routerLinkActive="mat-accent">{{route.label}}</a>
             </mat-toolbar-row>
           </mat-toolbar>
         </div>
+
+        <app-header></app-header>
 
         <router-outlet></router-outlet>
       </div>
