--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isVisible" class="header" [ngStyle]="getBackgroundStyle()">
+<div class="header" [ngStyle]="getBackgroundStyle()">
   <div class="header-padding" ngClass.xs="header-padding-xs">
     <div>
       <div class="info" ngClass.xs="info-xs" fxFlex="475px" fxFlex.xs="100" [ngStyle.gt-xs]="getInfoStyle()">
