use updated header and PageInfo model, update test

--- a/src/app/core/components/home/home-dashboard/home-dashboard.component.html
+++ b/src/app/core/components/home/home-dashboard/home-dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-  <h1 class="mat-h1">My Research Hub</h1>
+  <h1 class="mat-h1">Access eResearch Services:</h1>
   <mat-grid-list cols="2" rowHeight="350px">
     <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
 
