--- a/src/app/core/components/home/home.component.html
+++ b/src/app/core/components/home/home.component.html
@@ -1,5 +1,8 @@
 
+<app-header 
+  [title]="pageInfo.title"
+  [description]="pageInfo.description"
+  [imageUrl]="pageInfo.imageUrl"></app-header>
 <div class="home-container">
-  <span>Welcome to the {{ title }}!</span>
   <home-dashboard></home-dashboard>
 </div>
