--- a/src/app/core/components/my-projects/my-projects.component.html
+++ b/src/app/core/components/my-projects/my-projects.component.html
@@ -1,3 +1,7 @@
+<app-header 
+  [title]="pageInfo.title"
+  [description]="pageInfo.description"
+  [imageUrl]="pageInfo.imageUrl"></app-header>
 <div class="my-projects-container">
   <h2>My Projects</h2>
   <a class="margin-right-l padding-bottom-s" (click)="logout()" routerLink="/home">Logout</a>
