--- a/src/app/core/components/my-services/my-services.component.html
+++ b/src/app/core/components/my-services/my-services.component.html
@@ -1,3 +1,7 @@
+<app-header 
+  [title]="pageInfo.title"
+  [description]="pageInfo.description"
+  [imageUrl]="pageInfo.imageUrl"></app-header>
 <div class="my-services-container">
   <p>my-services works!</p>
 </div>
