--- a/src/app/core/components/my-projects/my-projects.component.scss
+++ b/src/app/core/components/my-projects/my-projects.component.scss
@@ -1,3 +1,15 @@
 .my-projects-container {
-  margin: 15px;
+  margin-top: 2em;
+  margin-left: 3em;
+  margin-right: 2em;
+  margin-bottom: 2em;
+}
+
+.mat-card {
+  margin-bottom: 2em;
+}
+
+.mat-card>.mat-card-actions:last-child {
+  padding-right: 8px;
+  padding-bottom: 8px;
 }
