--- a/src/app/core/components/my-services/my-services.component.scss
+++ b/src/app/core/components/my-services/my-services.component.scss
@@ -1,8 +1,7 @@
-.my-services-container {
-  margin-top: 2em;
+.my-services-content {
+  margin: 2em;
   margin-left: 3em;
-  margin-right: 2em;
-  margin-bottom: 2em;
+  width: 50%;
 }
 
 .mat-card {
