--- a/src/app/core/components/faqs-panel/faqs-panel.component.html
+++ b/src/app/core/components/faqs-panel/faqs-panel.component.html
@@ -1,27 +1,24 @@
 <div class="faqs-panel-container" ngClass.lt-md="faqs-panel-container-sm">
-
-  <mat-list>
-    <h3 matSubheader>{{faqs.vm.title}}</h3>
-    <p class="faqs-description"><span>Description: </span>{{faqs.vm.description}}</p>
-    <div *ngFor="let faq of faqs.vm.faqs">
-      <mat-list-item>
+  <mat-expansion-panel *ngFor="let category of faqs">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
         <mat-icon matListIcon>note</mat-icon>
-        <h4 class="faqs-question">{{faq.question}}</h4>
-      </mat-list-item>
-      <h5>{{faq.answer}}</h5>
-    </div>
-
-    <mat-divider></mat-divider>
-
-    <h3 matSubheader>{{faqs.dropbox.title}}</h3>
-    <p class="faqs-description"><span>Description: </span>{{faqs.dropbox.description}}</p>
-    <div *ngFor="let faq of faqs.dropbox.faqs">
-      <mat-list-item>
-        <mat-icon matListIcon>note</mat-icon>
-        <h4 class="faqs-question">{{faq.question}}</h4>
-      </mat-list-item>
-      <h5>{{faq.answer}}</h5>
-    </div>
-      
-  </mat-list>
+        {{category.title}}
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <p class="faqs-description">
+      <strong class="faqs-emphasis">Description: </strong>
+      {{category.description}}
+    </p>
+    <ul *ngFor="let faq of category.faqs">
+      <mat-expansion-panel class="questions" hideToggle>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            <li class="faqs-emphasis">{{faq.question}}</li>
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <p class="faqs-text">{{faq.answer}}</p>
+      </mat-expansion-panel>
+    </ul>
+  </mat-expansion-panel>
 </div>
