--- a/src/app/core/components/faqs-panel/faqs-panel.component.scss
+++ b/src/app/core/components/faqs-panel/faqs-panel.component.scss
@@ -12,19 +12,40 @@
   width: 100%;
 }
 
-.mat-list-item {
-  padding-top: 1em;
-}
-
-.mat-divider {
-  margin-left: 1em;
-  margin-right: 1em;
-}
-
 .faqs-description {
   font-size: small;
 }
 
-.faqs-question {
+.faqs-text {
   font-size: small;
+  margin-left: -24px;
+  margin-right: -24px;
+}
+
+.faqs-emphasis {
+  font-size: small;
+  color: $color-primary;
+}
+
+.mat-expansion-panel:not([class*='mat-elevation-z']) {
+  box-shadow: none;
+}
+
+.questions * {
+  padding: 0;
+}
+
+/*
+* list bullets styles
+*/
+ul {
+  margin: 2px 0;
+  padding: 0;
+  list-style: none; /* Remove default bullets */
+}
+
+ul li::before {
+  content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+  color: $color-primary; /* Change the color */
+  margin-right: 0.5em;
 }
