--- a/src/app/core/components/faqs-panel/faqs-panel.component.scss
+++ b/src/app/core/components/faqs-panel/faqs-panel.component.scss
@@ -12,6 +12,18 @@
   width: 100%;
 }
 
+.faqs-avatar {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
+}
+
+.faqs-category-title {
+  color: $color-primary;
+  margin-left: 0.5em;
+  margin-bottom: 0;
+  margin-top: 0.5em;
+}
+
 .faqs-description {
   font-size: small;
 }
@@ -20,6 +32,7 @@
   font-size: small;
   margin-left: -24px;
   margin-right: -24px;
+  margin-bottom: 0;
 }
 
 .faqs-emphasis {
@@ -29,6 +42,7 @@
 
 .mat-expansion-panel:not([class*='mat-elevation-z']) {
   box-shadow: none;
+  padding: 1em 0;
 }
 
 .questions * {
@@ -39,7 +53,7 @@
 * list bullets styles
 */
 ul {
-  margin: 2px 0;
+  margin: 0;
   padding: 0;
   list-style: none; /* Remove default bullets */
 }
