--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -31,8 +31,45 @@
               <a routerLink="/" class="dashboard-logo" ngClass.xs="dashboard-logo-xs">
                 <img src="https://via.placeholder.com/239x32">
               </a>
-              <!-- <span style="flex: 1 1 auto;"></span> -->
+
+              <span style="flex: 1 1 auto;"></span>
+              
+              <!-- standard routes buttons -->
               <a mat-button *ngFor="let route of routes" fxHide.lt-md [routerLink]="route.path" routerLinkActive="mat-accent">{{route.label}}</a>
+
+              <!-- login/logout/profile -->
+              <button *ngIf="!authenticated" mat-button (click)="login()">Sign In</button>
+
+              <button class="button-menu" *ngIf="authenticated" mat-button [matMenuTriggerFor]="userMenu">
+                <mat-icon matPrefix style="margin-right: 5px;" fxHide.xs>person</mat-icon>
+                <span fxHide fxShow.gt-md>{{ userInfo?.firstName + ' ' + userInfo?.lastName }}</span>
+                <span fxHide fxShow.md>{{ userInfo?.firstName }}</span>
+                <span fxHide.gt-sm>{{ userInfo?.firstName?.charAt(0) + userInfo?.lastName?.charAt(0) }}</span>
+              </button>
+
+              <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
+                <div class="user-menu-container" *ngIf="authenticated">
+                  <!-- <img src="/assets/images/uoa-logo-blue.svg"> -->
+
+                  <mat-list class="user-menu-list">
+                    <mat-list-item>
+                      <mat-icon mat-list-icon>person</mat-icon>
+                      <p mat-line>{{ userInfo?.firstName + ' ' + userInfo?.lastName }}</p>
+                    </mat-list-item>
+                    <mat-list-item>
+                      <mat-icon mat-list-icon>note</mat-icon>
+                      <p mat-line>{{ userInfo?.email }}</p>
+                    </mat-list-item>
+                  </mat-list>
+
+                  <div fxLayout="row" fxLayoutAlign="end">
+                    <button mat-raised-button style="color: black; background-color: white;" (click)="logout()">
+                      Sign Out
+                    </button>
+                  </div>
+                </div>
+              </mat-menu>
+
             </mat-toolbar-row>
           </mat-toolbar>
         </div>
