--- a/src/app/core/components/my-projects/my-projects.component.html
+++ b/src/app/core/components/my-projects/my-projects.component.html
@@ -24,21 +24,8 @@
     
     <div class="margin-top-l margin-left-m">
       <div>
-        <h3>User Info</h3>
         <div *ngIf="(loading$ | async)">
-          Loading...
-        </div>
-        <div *ngIf="userInfo" class="margin-top-l">
-          <p>Name: {{userInfo.firstName}} {{userInfo.lastName}}</p>
-          <p>UPI: {{userInfo.upi}}</p>
-          <p>Email: {{userInfo.email}}</p>
-          <p>Groups: {{userInfo.groups}}</p>
-        </div>
-        <div *ngIf="!userInfo && !(loading$ | async)" class="margin-top-l">
-          Error: Could not get user info
-        </div>
-        <div *ngIf="(loading$ | async)">
-          Loading...
+          <mat-spinner></mat-spinner>
         </div>
         <div *ngIf="error">
           Error: {{error}}
@@ -51,7 +38,6 @@
         </div>
       </div>
     </div>
-    <a class="margin-right-l padding-bottom-s" (click)="logout()" routerLink="/">Logout</a>
   </div>
   
   <faqs-panel></faqs-panel>
