--- a/src/app/core/components/home/home-dashboard/home-dashboard.component.html
+++ b/src/app/core/components/home/home-dashboard/home-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="grid-container">
   <h1 class="mat-h1">Access eResearch Services:</h1>
-  <mat-grid-list cols="2" rowHeight="350px">
+  <mat-grid-list cols="2" rowHeight="480px">
     <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
 
       <mat-card class="dashboard-card">
@@ -9,18 +9,10 @@
           <div mat-card-avatar class="dashboard-header-image"></div>
           <mat-card-title>
             {{card.title}}
-            <!-- <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
-              <mat-icon>more_vert</mat-icon>
-            </button>
-            <mat-menu #menu="matMenu" xPosition="before">
-              <button mat-menu-item>Expand</button>
-              <button mat-menu-item>Remove</button>
-            </mat-menu> -->
           </mat-card-title>
-          <!-- <mat-card-subtitle>subtitle goes here</mat-card-subtitle> -->
         </mat-card-header>
 
-        <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
+        <img mat-card-image src="{{card.image}}" alt="{{card.altText}}" routerLink="{{card.routerLink}}">
 
         <mat-card-content class="dashboard-card-content">
           <p>{{card.content}}</p>
