--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -38,13 +38,13 @@
               <a mat-button *ngFor="let route of routes" fxHide.lt-md [routerLink]="route.path" routerLinkActive="mat-accent">{{route.label}}</a>
 
               <!-- login/logout/profile -->
-              <button *ngIf="!authenticated" mat-button (click)="login()">Sign In</button>
+              <button class="signin-button" *ngIf="!authenticated" mat-button (click)="login()">Sign In</button>
 
               <button class="button-menu" *ngIf="authenticated" mat-button [matMenuTriggerFor]="userMenu">
                 <mat-icon matPrefix style="margin-right: 5px;" fxHide.xs>person</mat-icon>
-                <span fxHide fxShow.gt-md>{{ userInfo?.firstName + ' ' + userInfo?.lastName }}</span>
-                <span fxHide fxShow.md>{{ userInfo?.firstName }}</span>
-                <span fxHide.gt-sm>{{ userInfo?.firstName?.charAt(0) + userInfo?.lastName?.charAt(0) }}</span>
+                <span id="user-fullname" fxHide fxShow.gt-md>{{ userInfo?.firstName + ' ' + userInfo?.lastName }}</span>
+                <span id="user-firstname" fxHide fxShow.md>{{ userInfo?.firstName }}</span>
+                <span id="user-initials" fxHide.gt-sm>{{ userInfo?.firstName?.charAt(0) + userInfo?.lastName?.charAt(0) }}</span>
               </button>
 
               <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
