more linting fixes

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -4,5 +4,5 @@
   [description]="pageInfo.description"
   [imageUrl]="pageInfo.imageUrl"></app-header>
 <div class="home-container">
-  <home-dashboard></home-dashboard>
+  <app-home-dashboard></app-home-dashboard>
 </div>
