tidy up user menu

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -50,7 +50,7 @@
     
                   <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
                     <div class="user-menu-container">
-                      <!-- <img src="/assets/images/uoa-logo-blue.svg"> -->
+                      <img class="uoa-logo" src="/assets/imgs/uoa-logo.svg">
     
                       <mat-list class="user-menu-list">
                         <mat-list-item>
