--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -93,10 +93,13 @@
  */
 .user-menu-container {
   margin-right: 8px;
-  margin-left: 8px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+// override material style:
+::ng-deep.mat-menu-panel {
+  max-width: none !important;
 }
 
 .user-menu-list {
@@ -110,4 +113,9 @@
 .user-menu-list mat-list-item p {
   font-size: 0.7em !important;
   color: black;
+}
+
+.uoa-logo {
+  max-width: 240px;
+  align-self: center;
 }
