--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="header-padding" ngClass.xs="header-padding-xs">
     <div>
       <div class="info" ngClass.xs="info-xs" fxFlex="475px" fxFlex.xs="100" [ngStyle.gt-xs]="getInfoStyle()">
-        <h1 *ngIf="title">{{title}}</h1>
+        <h1 class="header-title" *ngIf="title">{{title}}</h1>
         <div *ngIf="description" class="header-description">
           <p>{{description}}</p>
         </div>
