--- a/src/app/modules/my-projects/my-projects.component.html
+++ b/src/app/modules/my-projects/my-projects.component.html
@@ -5,9 +5,8 @@
 <div class="my-projects-container" fxLayout="row wrap" fxLayoutAlign="end">
   <div class="my-projects-content" fxFlex="1 0 auto" fxLayout="column" fxLayoutAlign="start">
     <mat-card>
-      <mat-card-title>
-        <h2>My Projects</h2>
-      </mat-card-title>
+      <mat-card-title>My Projects</mat-card-title>
+      <mat-card-subtitle>Projects | Dashboard</mat-card-subtitle>
       <mat-card-content>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean commodo pretium leo, vitae fringilla velit iaculis quis. 
@@ -28,14 +27,39 @@
           <mat-spinner></mat-spinner>
         </div>
         <div *ngIf="error">
-          Error: {{error}}
+          Error: {{error.message}}
         </div>
-        <div *ngIf="personInfo">
-          PersonInfo: {{personInfo | json }}
-          <div *ngFor="let project of personInfo.projects">
-            <p>Project Id: {{project.id}}</p>
+        <div *ngIf="!(loading$ | async) && personProjects?.projects?.length > 0; else noProjects">
+          <!-- PersonInfo: {{personInfo | json }} -->
+          <div *ngFor="let personProject of personProjects.projects">
+
+            <mat-card class="person-projects-card">
+              <mat-card-header>
+                <mat-card-title>{{personProject.project.title}}</mat-card-title>
+                <mat-card-subtitle>{{personProject.project.start_date | date}} - {{personProject.project.end_date | date}}</mat-card-subtitle>
+              </mat-card-header>
+              <mat-card-content>
+                <div class="project-members">
+                  <mat-chip-list aria-label="Project Members">
+                    <mat-chip *ngFor="let member of personProject.project.members" matTooltip="{{member.role.name}}">{{member.person.full_name}}</mat-chip>
+                  </mat-chip-list>
+                </div>
+                <p class="project-description">
+                  {{personProject.project.description}}
+                </p>
+              </mat-card-content>
+              <mat-card-actions align="end">
+                <button mat-flat-button color="accent" routerLink="/my-projects/{{personProject.project.id}}">View</button>
+              </mat-card-actions>
+            </mat-card>
+            
           </div>
         </div>
+        <ng-template #noProjects>
+          <div *ngIf="!(loading$ | async) && !error">
+            No projects yet!
+          </div>
+        </ng-template>
       </div>
     </div>
   </div>
