--- a/src/app/modules/my-projects/project/project.component.scss
+++ b/src/app/modules/my-projects/project/project.component.scss
@@ -27,3 +27,8 @@
 .mat-card-subtitle {
   color: $color-primary;
 }
+
+.member-avatar-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
+}
